# appimage-updater

./: .gitignore  .mdformat-exclusions.md  .pymarkdown.json  .python-versions  1  CHANGELOG.md  FORMATTER_AUDIT_CHECKLIST.md  LICENSE  MIGRATION.md  MIGRATION_GUIDE.md  README.md  REFACTORING_SUCCESS_SUMMARY.md  TESTING.md  TODO Specific Refactoring Recommendations.md  Taskfile.yml  WARP.md  coverage.json  debug-environment.json  debug_failing_requests.py  debug_fast_failure.py  debug_parallel.py  debug_response_content.py  demo_compatibility.py  example_dependency_injection.py  freecad.json  gitlab_plan.md  global_config_design.md  mkdocs.yml  performance_test.py  pyproject.toml  recreate.sh  recreate_split_tests.py  t  t.out  t.py  test_appimage_scenario.py  test_async_concurrent.py  test_httpx_performance.py  test_monkey_patch_effect.py  test_parallel_verification.py  (+4 more)
.github/workflows/: ci.yml  docs.yml  publish.yml  release.yml
docs/: architecture.md  changelog.md  ci-debugging.md  commands.md  compatibility.md  configuration.md  contributing.md  development.md  direct-support.md  duplication-reduction-plan.md  examples.md  gen_ref_pages.py  getting-started.md  github-support.md  gitlab-support.md  index.md  installation.md  linux-only.md  metrics.md  pypi-publishing-setup.md  repo_plan.md  repository-url-handling-plan.md  rotation.md  security.md  sourceforge-support.md  test-coverage-improvements.md  test_analysis.md  testing.md  tests.md  troubleshooting.md  usage.md  zip-support.md
docs/stylesheets/: extra.css
examples/: comprehensive.json  freecad.json  freecad_weekly_rotation.json  version_service_usage.py
schemas/: global-config.schema.json
scripts/: ci-local.sh  compare_configs_simple.py  custom_argparse.py  debug-env.py  dev-metrics.py  metrics.py  metrics.sh  python_argparse_custom_help_usage_original.py  recreate.sh  tree-to-github-markdown.sh
src/appimage_updater/: __init__.py  __main__.py  _version.py  cli_options.py  config.py  config_command.py  config_loader.py  config_operations.py  config_operations_modular.py  dependency_injection.py  display.py  distribution_selector.py  downloader.py  facade.py  github_auth.py  github_client.py  help_groups.py  interactive.py  interactive_clean.py  logging_config.py  main.py  main_new.py  main_old.py  models.py  pattern_generator.py  system_info.py  version_checker.py
src/appimage_updater/cli/: __init__.py  add_command_logic.py  application.py  display_utilities.py  error_handling.py  options.py  parameter_resolution.py  validation_utilities.py
src/appimage_updater/commands/: __init__.py  add_command.py  base.py  base_command.py  check_command.py  config_command.py  edit_command.py  factory.py  fix_command.py  init_command.py  list_command.py  mixins.py  parameters.py  remove_command.py  repository_command.py  show_command.py
src/appimage_updater/config/: __init__.py  command.py  deprecation.py  loader.py  manager.py  migration_helpers.py  models.py  operations.py
src/appimage_updater/config_cmd/: __init__.py  display_utilities.py  error_handling.py  file_operations.py  setting_operations.py
src/appimage_updater/config_ops/: __init__.py  directory_utilities.py  generation_utilities.py  loading_operations.py  management_utilities.py  validation_utilities.py
src/appimage_updater/core/: __init__.py  distribution_selector.py  downloader.py  http_service.py  http_trace.py  info_file_service.py  info_operations.py  local_version_service.py  models.py  operations.py  parallel.py  pattern_generator.py  repository_operations.py  repository_version_service.py  system_info.py  timeout_strategy.py  update_operations.py  version_checker.py  version_parser.py  (+1 more)
taskfiles/: Taskfile-env.yml  Taskfile-lint.yml  Taskfile-metrics.yml  Taskfile-release.yml  Taskfile-test.yml  Taskfile-version.yml
tests/: README.md  conftest.py  test_add_regression.py  test_appimage_rotation_fix.py  test_distribution_selector.py  test_e2e.py  test_edit_command.py  test_edit_validation_fixes.py  test_github_auth.py  test_intelligent_pattern_generation.py  test_prerelease_autodetection.py  test_rotation.py  test_rotation_varying_filenames.py
tests/e2e/: conftest.py  test_add_remove_commands.py  test_check_command_regression.py  test_check_command_workflows.py  test_cli_commands.py  test_config_set_show_workflow.py  test_e2e.py  test_fix_command_e2e.py  test_format_validation_workflows.py  test_integration_smoke.py  test_modern_add_commands.py  test_modern_remove_commands.py  test_modern_show_pattern.py  test_pattern_matching.py  test_stack_trace_detection.py
tests/functional/: test_appimage_rotation_fix.py  test_edit_command.py  test_edit_command_functional.py  test_edit_validation_fixes.py  test_format_options.py  test_format_validation.py  test_http_tracker_dry_run.py  test_multi_app_commands.py  test_output_formats.py  test_rotation.py  test_rotation_varying_filenames.py  test_user_error_handling.py
tests/integration/: test_direct_workflow_simple.py  test_repository_integration.py
tests/regression/: conftest.py  test_add_regression.py  test_check_command_regression.py  test_defaults_regression.py  test_edit_persistence_bug.py  test_http_tracker_dry_run.py  test_stack_trace_detection.py
tests/unit/: test_application_display.py  test_commands.py  test_config_directory_loading.py  test_config_manager.py  test_config_operations.py  test_dependency_injection.py  test_dist_selector_asset_parsing.py  test_dist_selector_models.py  test_dist_selector_ui_utilities.py  test_distribution_selector.py  test_event_system.py  test_fix_command_orphaned_info.py  test_github_auth.py  test_help_groups.py  test_intelligent_pattern_generation.py  test_logging_config.py  test_migration_helpers.py  test_path_formatting.py  test_prerelease_autodetection.py  test_repositories_init.py  test_repository_factory.py  test_results_display.py  test_services_init.py  test_system_compatibility.py  test_table_formatting.py  test_url_formatting.py  test_version_checker.py  test_version_formatting.py  test_version_services_integration.py  test_zip_extraction.py
(+186 files in other folders)
