[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "appimage-updater"
version = "0.5.3"
description = "A Linux service for automating finding and downloading AppImage applications"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Roy Wright", email = "roy@wright.org" }
]
keywords = ["appimage", "updater", "linux", "package-manager", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: System :: Software Distribution",
    "Topic :: Utilities",
]
dependencies = [
    "httpx>=0.25.0",
    "importlib-metadata>=8.7.0",
    "loguru>=0.7.0",
    "packaging>=23.0",
    "pydantic>=2.5.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/royw/appimage-updater"
Documentation = "https://royw.github.io/appimage-updater/"
Repository = "https://github.com/royw/appimage-updater"
Issues = "https://github.com/royw/appimage-updater/issues"
Changelog = "https://github.com/royw/appimage-updater/blob/main/CHANGELOG.md"

# Using [dependency-groups] instead of [project.optional-dependencies] for modern uv support
# [project.optional-dependencies]
# dev = [...]

[project.scripts]
appimage-updater = "appimage_updater.main:cli_main"

[tool.hatch.build.targets.wheel]
packages = ["src/appimage_updater"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.appimage-updater.complexity]
# Functions with legitimate domain complexity that are excluded from complexity checks
exclude = [
    "SourceForgeRepository.generate_pattern_from_releases",
    "SourceForgeRepository.parse_repo_url",
    "SourceForgeRepository._convert_to_direct_download_url",
    "SourceForgeRepository._should_enable_prerelease",
    "VersionChecker._is_release_compatible_with_config",
]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# Additional strictness for better type safety
disallow_any_generics = true
disallow_subclassing_any = true
# Enable additional error codes for better checking
enable_error_code = ["misc", "type-arg", "assignment"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "C901", # mccabe complexity
    "E402", # Module level import not at top of file
    "TID",  # flake8-tidy-imports (detects banned imports and import style issues)
    "PLC",  # Pylint convention
]
ignore = [
    "S101",  # Use of assert detected
    "TID252", # Prefer absolute imports over relative imports (we'll fix this separately)
]
per-file-ignores = { "tests/*" = ["S101"] }

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
# Configure ruff's built-in isort to match project preferences
known-first-party = ["appimage_updater"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
lines-after-imports = 2
force-single-line = false
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.lint.flake8-tidy-imports]
# Ban function-level imports - all imports should be at module level
ban-relative-imports = "all"


[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/functional"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src/appimage_updater",
    "--cov-report=term:skip-covered",
    "--cov-report=html",
    "--cov-config=pyproject.toml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m not slow')",
]
# The e2e test warnings are caused by AsyncMockMixin._execute_mock_call creating unawaited coroutines in test mocks. These are test infrastructure issues that:
#
# Don't affect test functionality
# Don't affect production code
# Are safe to suppress
#
# Affected Tests:
#
# - test_add_command_with_invalid_url
# - test_add_command_with_direct_flag
# - test_add_with_direct_flag_modern
# - test_add_github_repository_modern
# - test_add_duplicate_name_error_modern
# - test_add_path_expansion_modern
# - test_pattern_matching_with_suffixes
#
# The remaining RuntimeWarning printed after tests complete is from cleanup code (http_service.py:136) and doesn't affect test results or CI success.
filterwarnings = [
    "ignore:coroutine.*AsyncMockMixin.*was never awaited:RuntimeWarning",
    "ignore::RuntimeWarning:appimage_updater.core.http_service",
]

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
parallel = false
concurrency = ["thread"]

[tool.coverage.paths]
source = ["src/", "*/site-packages/"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "autotyping>=24.9.0",
    "deadcode>=2.4.0",
    "infer-types>=1.0.0",
    "isort>=6.0.1",
    "mkdocs>=1.6.1",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.7",
    "mkdocs-git-revision-date-plugin>=0.3.2",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-material>=9.6.18",
    "mkdocs-mermaid2-plugin>=1.2.2",
    "mkdocstrings[python]>=0.30.0",
    "mypy>=1.17.1",
    "pylint>=3.3.8",
    "pytest>=8.4.1",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=6.2.1",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.8.0",
    "radon>=6.0.1",
    "ruff>=0.12.11",
    "taskfile-help>=0.4.1",
    "trio>=0.30.0",
    "twine>=6.2.0",
    "version-bumper>=0.1.2",
    "watchdog>=6.0.0",
]

[tool.deadcode]
# Functions/methods to ignore - used in testing infrastructure or by decorators
ignore-names = [
    # CLI commands (decorated with @app.command)
    "main",
    "main_callback",
    "check",
    "edit",
    "list_apps",
    "show",
    "repository",
    "add",
    "remove",
    "config",
    # Pydantic validators (decorated with @field_validator)
    "validate_pattern",
    "validate_download_dir",
    "validate_symlink_path",
    "model_post_init",
    "validate_paths",
    "apply_global_defaults_to_config",
    # Pydantic model fields
    "checked_at",
    "expected",
    "actual",
    "duration_seconds",
    "message",
    "timestamp",
    "codename",
    "distribution_family",
    # Output formatter protocol methods
    "print_progress",
    "print_success",
    "print_error",
    "print_warning",
    "print_info",
    "print_config_settings",
    # Internal utility functions
    "generate_pattern_from_releases",
    "_try_parse_last_modified_header",
    "_try_parse_date_header",
    "_extract_version_from_filename",
    "excepthook",
    "_print_troubleshooting_tips",
    "_handle_edit_preview_modes",
    "_apply_edit_updates_to_apps",
    "supported_domains",
    # Testing infrastructure (used in tests/)
    "set_http_client_factory",
    "reset_http_client_factory",
]

# Decorators that indicate a function is used
ignore-if-decorated-with = [
    "@app.command",
    "@app.callback",
    "@field_validator",
]

[tool.dev-metrics]
# Paths for metrics calculation
src-paths = "src"
tests-paths = "tests"
# Tool paths (can be overridden for custom installations)
radon-path = ["uv", "run", "radon"]
pylint-path = ["uv", "run", "pylint"]
pytest-path = ["uv", "run", "pytest"]
# Test file configuration
test-pattern = "test_*.py"
# Filter to specific test type subdirectory
test-type = [
    "unit",
    "functional",
    "integration",
    "e2e"
]
package = "appimage_updater"  # Optional: auto-detected from src/ directory or project name
# Optional: files to exclude from untested report
excluded-files = ["__init__.py", "__main__.py", "_version.py"]
